# OrcaGym

./: .gitattributes  .gitignore  .gitmodules  ANGLE_SMOOTHER_FIX_README.md  ANIMATION_MODIFICATION_README.md  CHANGELOG.md  LICENSE  MANIFEST.in  MULTI_OBJECT_ANIMATION_README.md  Makefile  PHASE_OFFSET_SOLUTION_README.md  README.md  ROBOT_CONFIG_UPDATE.md  WAIST_COMPATIBILITY_GUIDE.md  WAIST_CONTROL_README.md  WAIST_DATA_SAVING_README.md  WAIST_ROTATION_FIX_SUMMARY.md  WAIST_ROTATION_IMPLEMENTATION.md  ctrl_info.pkl  d12_waist.xml  d12_waist_fixed.xml  out.xml  pyproject.toml  requirements.txt  reward_history.txt  test_waist_compatibility.py  test_waist_rotation_fix.py  waist_control_example.py  waist_data_saving_example.py  waist_position_control_example.py  waist_rotation_example.py
Remy/conv/: remy.yaml
Remy/dae/: Remy.dae
Remy/mjcf_usd/: usd_box.xml
Remy/usd/: remy.xml
doc/: API_REFERENCE.md  Framework_Comparison_Summary.md  IMPORT_PATH_EXPLANATION.md  Isaac_Gym_Migration_Guide.md  README-CN.md  check_python_path.py  setup-wsl-grpc-communication.md  teleoperation_target_object_generation_flow.md
doc/api_detail/: INDEX.md  core.md  environment.md
doc/api_flat/: INDEX.md  core.md  environment.md
doc/api_manual/: INDEX.md  core.md  environment.md
docs/: README.md  _config.yml  index.md
envs/: README.md  __init__.py  orca_gym_env.py  orca_gym_local_env.py  orca_gym_remote_env.py  robot_core.py  robot_env.py
envs/aloha/: aloha_dm_env.py  aloha_env.py  aloha_orcagym_task.py
envs/assets/: OpenloongMocapToys.xml  humanoid.xml  pusher_v5.xml
envs/car_control/: README.md  car_joystick_env.py  car_keyboard_env.py
envs/character/: character.py  character_env.py
envs/franka/: franka_env.py  gripper_env.py  pick_and_place.py  push.py  reach.py  slide.py
envs/franka_control/: franka_joystick_env.py  (+3 more)
envs/openloong/: CMakeLists.txt  Openloong_arm_date_env.py  Openloong_arm_vr_env.py  Openloong_arm_xbox_env.py  README.md  camera_wrapper.py  openloong_env.py  openloong_joystick_env.py  openloong_joystick_env_save_qpos.py  test_libs.py  test_websocket.py
envs/openloong/cpp/: bindings.cpp  openloong_wbc.cpp  openloong_wbc.h  orcagym_interface.cpp  orcagym_interface.h
examples/: README.md  quadruped_ctrl.py  rm65b_xbox_ctrl.py  test_keyboard_input.py
install/: local_setup.sh  setup.sh
local_stuff/: draw_reward.py
log/: latest_build  simulation_log_20250604_100848.csv  simulation_log_20250604_102230.csv  simulation_log_20250604_115238.csv  simulation_log_20250604_115320.csv  simulation_log_20250604_122701.csv  simulation_log_20250604_122822.csv  simulation_log_20250604_142246.csv  simulation_log_20250604_143531.csv  simulation_log_20250604_170902.csv  simulation_log_20250604_182249.csv  simulation_log_20250604_184005.csv  simulation_log_20250605_091222.csv  simulation_log_20250605_091311.csv  simulation_log_20250605_102956.csv  simulation_log_20250605_103215.csv  simulation_log_20250605_103350.csv  simulation_log_20250605_103542.csv  simulation_log_20250605_103810.csv  simulation_log_20250605_103827.csv  simulation_log_20250605_111516.csv  simulation_log_20250605_115454.csv  simulation_log_20250605_115629.csv  simulation_log_20250605_115710.csv  simulation_log_20250605_115740.csv  simulation_log_20250605_115807.csv  simulation_log_20250605_141210.csv  simulation_log_20250605_141331.csv  simulation_log_20250605_141400.csv  simulation_log_20250605_141429.csv  simulation_log_20250605_154620.csv  simulation_log_20250605_161830.csv  simulation_log_20250605_164724.csv  simulation_log_20250605_172210.csv  simulation_log_20250605_172339.csv  simulation_log_20250605_181211.csv  simulation_log_20250606_085445.csv  simulation_log_20250606_085512.csv  simulation_log_20250606_085538.csv  simulation_log_20250606_105113.csv  (+87 more)
orca-studio-projects/: README.md
orca_gym/: __init__.py  dataset_util.py  down_projects.py  orca_gym.py  orca_gym_agent.py  orca_gym_data.py  orca_gym_local.py  orca_gym_model.py  orca_gym_opt_config.py  orca_gym_remote.py
reward_history/: reward_history_2025-05-30_10-26-14.txt  reward_history_2025-05-30_10-27-14.txt  reward_history_2025-05-30_11-32-10.txt  reward_history_2025-05-30_11-53-42.txt  reward_history_2025-05-30_14-36-37.txt  reward_history_2025-05-30_15-24-24.txt  reward_history_2025-05-30_15-41-40.txt  reward_history_2025-05-30_15-53-18.txt  reward_history_2025-05-30_16-07-46.txt  reward_history_2025-05-30_16-12-02.txt  reward_history_2025-05-30_16-49-42.txt  reward_history_2025-05-30_17-01-23.txt  reward_history_2025-05-30_17-04-37.txt  reward_history_2025-05-30_17-07-02.txt  reward_history_2025-05-30_17-15-55.txt  reward_history_2025-05-30_17-24-51.txt  reward_history_2025-05-30_17-34-54.txt  reward_history_2025-05-30_17-52-23.txt  reward_history_2025-05-30_18-03-58.txt  reward_history_2025-06-03_08-55-34.txt  reward_history_2025-06-03_09-47-51.txt  reward_history_2025-06-03_11-27-55.txt  reward_history_2025-06-03_12-10-41.txt  reward_history_2025-06-03_14-00-59.txt  reward_history_2025-06-03_15-01-31.txt  reward_history_2025-06-03_15-35-15.txt  reward_history_2025-06-03_15-47-20.txt  reward_history_2025-06-03_16-54-04.txt  reward_history_2025-06-04_08-53-45.txt  reward_history_2025-06-04_09-41-02.txt  reward_history_2025-06-04_10-39-13.txt  reward_history_2025-06-04_12-01-09.txt  reward_history_2025-06-04_15-05-59.txt  reward_history_2025-06-04_15-10-09.txt  reward_history_2025-06-04_15-13-28.txt  reward_history_2025-06-04_16-03-43.txt  reward_history_2025-06-04_16-08-25.txt  reward_history_2025-06-04_16-13-56.txt  reward_history_2025-06-04_16-32-24.txt  reward_history_2025-06-04_16-40-44.txt  (+152 more)
tutorial/: Basic-RL-Example.ipynb  FrankaEmikaPanda控制.ipynb  FrankaMocapMultiAgents.py  FrankaMocap控制.ipynb  FrankaPanda-RL.ipynb  GymEnvTest.ipynb  Gym环境测试.ipynb  Humaniod-LQR.ipynb  Import-New-Robot.ipynb  LQR_控制Humaniod机器人.ipynb  Quadruped-Robot.ipynb  Teleoperation.ipynb  Teleoperation.py  Xbox-Joystick-Control.ipynb  franka_robomimic_train_rollout.py  play_Teleoperation.py  pyTouchTest.ipynb  xbox手柄控制.ipynb  导入新机器人.ipynb
(+2607 files in other folders)
