[build-system]
requires = [ "setuptools>=42", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "orca-gym"
version = "25.12.4"
description = "OrcaGym Core - Cloud-native robotics simulation platform compatible with Gymnasium API"
readme = "README.md"
requires-python = ">=3.9"
keywords = [ "robotics", "simulation", "reinforcement-learning", "gymnasium", "mujoco",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Scientific/Engineering :: Artificial Intelligence",]
dependencies = [ "numpy==2.2.6", "scipy==1.16.2", "scipy-stubs==1.16.2.4", "grpcio==1.66.1", "grpcio-tools==1.66.1", "gymnasium==1.2.1", "mujoco==3.3.3", "aiofiles==25.1.0",]
[[project.authors]]
name = "松应科技"
email = "huangwei@orca3d.cn"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/openverse-orca/OrcaGym"
Documentation = "https://github.com/openverse-orca/OrcaGym"
Repository = "https://github.com/openverse-orca/OrcaGym"
"Bug Tracker" = "https://github.com/openverse-orca/OrcaGym/issues"

[project.optional-dependencies]
dev = [ "pytest", "pytest-cov", "flake8", "black", "mypy",]
rl = [ "stable-baselines3>=2.3.2", "sb3_contrib>=2.3.0", "tensorboard",]
imitation = [ "h5py", "opencv-python", "tqdm",]
devices = [ "pygame>=2.6.0",]
sensors = [ "websockets", "av", "opencv-python", "matplotlib",]
tools = [ "pyyaml", "trimesh", "requests", "tqdm",]
robomimic = [ "h5py", "termcolor", "opencv-python",]
robosuite = [ "numba",]
all = [ "stable-baselines3>=2.3.2", "sb3_contrib>=2.3.0", "tensorboard", "h5py", "opencv-python", "tqdm", "pygame>=2.6.0", "websockets", "av", "matplotlib", "pyyaml", "trimesh", "requests", "termcolor", "numba", "flask",]

[project.scripts]
orcagym-loop = "orca_gym.scripts.run_sim_loop:main"

[tool.setuptools]
license-files = []

[tool.setuptools.package-data]
orca_gym = [ "*.proto", "py.typed",]

[tool.setuptools.packages.find]
include = [ "orca_gym*",]
exclude = [ "examples*", "envs*", "doc*", "3rd_party*", "tests*",]
